Wait to notify completion until after a Lo-Fi image is reloaded.

Currently, if ImageResource::reloadIfLoFi() is called while that
ImageResource is still loading, the resource's clients and observers are
notified of completion when the current load is cancelled.

After this CL, the ImageResource waits to notify of completion until the
reload completes.

BUG=654055

Review-Url: https://codereview.chromium.org/2407573002
Cr-Commit-Position: refs/heads/master@{#424926}

Former-commit-id: 1e457676004f8af16e0086280b73d87c1e5efba7